# OptimizedKernelsForRaspberryPi5_NvidiaCUDA

./: .gitignore  AUDIT_PLAN.md  CMakeLists.txt  FunctionsIncluded.md  README.md  requirements.txt  setup_rpi5_vulkan_build.sh
.github/workflows/: ci.yml
OptMathKernels/: CMakeLists.txt  README.md
OptMathKernels/cmake/: OptMathKernelsConfig.cmake.in
OptMathKernels/examples/: CMakeLists.txt  example_main.cpp
OptMathKernels/include/optmath/: core.hpp  neon_kernels.hpp  vulkan_backend.hpp
OptMathKernels/src/: CMakeLists.txt
OptMathKernels/src/core/: core.cpp
OptMathKernels/src/neon/: neon_kernels.cpp
OptMathKernels/src/vulkan/: vulkan_backend.cpp
OptMathKernels/src/vulkan/shaders/: simple.comp.glsl
OptMathKernels/tests/: CMakeLists.txt  test_basic.cpp
benchmarks/: CMakeLists.txt  bench_common.hpp  bench_neon_gemm.cpp  bench_neon_transcendentals.cpp  bench_vulkan_matmul.cpp  bench_vulkan_reduce.cpp
examples/: CMakeLists.txt  cuda_demo.cpp
include/optmath/: cuda_backend.hpp  cuda_error.hpp  neon_fp16.hpp  neon_int8.hpp  neon_kernels.hpp  platform.hpp  radar_kernels.hpp  sve2_kernels.hpp  vulkan_backend.hpp
src/: CMakeLists.txt
src/cuda/: cuda_backend.cpp  cuda_complex.cu  cuda_kernels.cu  cuda_radar.cu
src/neon/: neon_complex.cpp  neon_conv2d.cpp  neon_fp16.cpp  neon_gemm_optimized.cpp  neon_iir.cpp  neon_int8.cpp  neon_kernels.cpp  neon_linalg.cpp  neon_radar.cpp  neon_resample.cpp
src/platform/: platform.cpp
src/sve2/: sve2_complex.cpp  sve2_detect.cpp  sve2_kernels.cpp  sve2_radar.cpp
src/vulkan/: vulkan_backend.cpp
src/vulkan/shaders/: conv1d.comp.glsl  convolution_1d.comp.glsl  mat_mul_tiled_mali.comp.glsl  reduce_sum_mali.comp.glsl  reduce_sum_subgroup.comp.glsl  vec_add.comp.glsl  vec_dot.comp.glsl  vec_mul.comp.glsl
tests/: CMakeLists.txt  test_cuda_kernels.cpp  test_cuda_radar.cpp  test_neon_fp16.cpp  test_neon_gemm.cpp  test_neon_iir.cpp  test_neon_kernels.cpp  test_neon_linalg.cpp  test_neon_quant_gemm.cpp  test_neon_transcendentals.cpp  test_platform.cpp  test_radar_caf.cpp  test_radar_cfar.cpp  test_sve2_kernels.cpp  test_vulkan_matrix.cpp
